# rust-xdr

./: .gitignore  .rustfmt.toml  .travis-update-gh-pages.sh  .travis.yml  Cargo.toml  README.md  index.html
doc/: search-index.js
doc/implementors/core/borrow/: trait.Borrow.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/convert/: trait.From.js  trait.Into.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/iter/: trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js  trait.Iterator.js
doc/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
doc/implementors/core/ops/: trait.Add.js  trait.BitAnd.js  trait.BitOr.js  trait.BitXor.js  trait.Deref.js  trait.Drop.js  trait.Not.js  trait.Sub.js
doc/implementors/core/str/: trait.FromStr.js
doc/implementors/serialize/serialize/: trait.Decodable.js  trait.Encodable.js
doc/implementors/std/error/: trait.Error.js
doc/implementors/std/io/: trait.BufRead.js  trait.Write.js
doc/implementors/syntax/ext/quote/rt/: trait.ToTokens.js
doc/implementors/xdr_codec/: trait.Read.js  trait.Unpack.js  trait.Write.js
doc/src/xdr_codec/: lib.rs.html  record.rs.html
doc/src/xdr_codec/src/: lib.rs.html  record.rs.html
doc/src/xdrgen/: lib.rs.html
doc/src/xdrgen/spec/: mod.rs.html  rustast.rs.html
doc/src/xdrgen/src/: lib.rs.html
doc/src/xdrgen/src/spec/: mod.rs.html  rustast.rs.html
doc/xdr_codec/: enum.Error.html  fn.pack.html  fn.pack_array.html  fn.pack_flex.html  fn.pack_opaque_array.html  fn.pack_opaque_flex.html  fn.pack_string.html  fn.padding.html  fn.unpack.html  fn.unpack_array.html  fn.unpack_flex.html  fn.unpack_flex_array.html  fn.unpack_opaque_array.html  fn.unpack_opaque_flex.html  fn.unpack_string.html  index.html  sidebar-items.js  struct.Opaque.html  trait.Pack.html  trait.Read.html  trait.Unpack.html  trait.Write.html  type.Result.html
doc/xdr_codec/record/: index.html  sidebar-items.js  struct.XdrRecordReader.html  struct.XdrRecordReaderIter.html  struct.XdrRecordWriter.html
doc/xdrgen/: fn.compile.html  fn.generate.html  index.html  sidebar-items.js
doc/xdrgen/spec/: sidebar-items.js
doc/xdrgen/spec/rustast/: constant.DUMMY_SP.html  enum.TokenTree.html  fn.expr_to_string.html  fn.item_to_string.html  fn.str_to_ident.html  fn.token_to_string.html  sidebar-items.js  struct.Expr.html  struct.ExtCtxt.html  struct.Ident.html  struct.Item.html  struct.Mod.html  struct.P.html  trait.AstBuilder.html
doc/xdrgen/spec/rustast/ast/: constant.CRATE_NODE_ID.html  constant.DUMMY_NODE_ID.html  constant.EMPTY_CTXT.html  enum.AsmDialect.html  enum.AttrStyle.html  enum.BinOpKind.html  enum.BinOp_.html  enum.BindingMode.html  enum.BlockCheckMode.html  enum.CaptureBy.html  enum.CaptureClause.html  enum.Constness.html  enum.DeclKind.html  enum.Decl_.html  enum.ExplicitSelf_.html  enum.ExprKind.html  enum.Expr_.html  enum.FloatTy.html  enum.ForeignItemKind.html  enum.ForeignItem_.html  enum.FunctionRetTy.html  enum.ImplItemKind.html  enum.ImplPolarity.html  enum.IntTy.html  enum.ItemKind.html  enum.Item_.html  enum.KleeneOp.html  enum.LitIntType.html  enum.LitKind.html  enum.Lit_.html  enum.MacStmtStyle.html  enum.MetaItemKind.html  enum.MetaItem_.html  enum.Mutability.html  enum.PatKind.html  enum.Pat_.html  enum.PathListItemKind.html  enum.PathListItem_.html  enum.PathParameters.html  enum.PrimTy.html  (+90 more)
doc/xdrgen/spec/rustast/syntax/: index.html  sidebar-items.js
doc/xdrgen/spec/rustast/syntax/abi/: enum.Abi.html  enum.AbiArchitecture.html  enum.Architecture.html  enum.Os.html  fn.all_names.html  fn.lookup.html  index.html  struct.AbiData.html
doc/xdrgen/spec/rustast/syntax/ast/: constant.CRATE_NODE_ID.html  constant.DUMMY_NODE_ID.html  constant.EMPTY_CTXT.html  enum.AsmDialect.html  enum.AttrStyle.html  enum.BinOpKind.html  enum.BinOp_.html  enum.BindingMode.html  enum.BlockCheckMode.html  enum.CaptureBy.html  enum.CaptureClause.html  enum.Constness.html  enum.DeclKind.html  enum.Decl_.html  enum.ExplicitSelf_.html  enum.ExprKind.html  enum.Expr_.html  enum.FloatTy.html  enum.ForeignItemKind.html  enum.ForeignItem_.html  enum.FunctionRetTy.html  (+112 more)
example/: Cargo.toml  build.rs
example/src/: simple.rs  simple.x
rustgen/: Cargo.toml
rustgen/src/: lib.rs
src/: lib.rs  xdr.rs  xdr.rustpeg  xdrgen.rs
src/spec/: mod.rs  test.rs
xdr-codec/: Cargo.toml  README.md
xdr-codec/src/: error.rs  lib.rs  record.rs  test.rs
xdr-codec/tests/: qc-record.rs  quickcheck.rs  test-record.rs  test.rs
xdrgen/: Cargo.toml  README.md
xdrgen/example/: Cargo.toml  build.rs
xdrgen/example/src/: simple.rs  simple.x
xdrgen/src/: lib.rs  xdrgen.rs
xdrgen/src/spec/: fake_extctxt.rs  mod.rs  rustast.rs  test.rs  xdr.rustpeg  xdr_nom.rs
xdrgen/tests/: lib.rs
(+961 files in other folders)
