[package]
name = "xdr-codec"
version = "0.1.4"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT"
description = "XDR encode/decode runtime support. Pairs with xdrgen which generates code from specs."
repository = "https://github.com/jsgf/rust-xdr-codec"
readme = "README.md"
keywords = ["encoding", "protocol", "xdr", "rfc4506", "serialization"]

[dependencies]
byteorder = "0.3.11"
