[package]
name = "xdrgen"
version = "0.1.9"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT"
description = "XDR codec generator from specification and runtime library"
repository = "https://github.com/jsgf/rust-xdrgen"
readme = "README.md"
keywords = ["encoding", "protocol", "xdr", "rfc4506", "serialization"]

[[bin]]
name = "xdrgen"
path = "src/xdrgen.rs"
test = false
bench = false
doc = false

[dependencies]
log = "0.3"
env_logger = "0.3"
nom = "~1.1.0"

[dependencies.xdr-codec]
path = "../xdr-codec"
version = "0.1.9"
