[package]
name = "xdrgen"
version = "0.3.0"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT/Apache-2.0"
description = "XDR codec generator from specification. Designed for use with xdr-codec."
repository = "https://github.com/jsgf/rust-xdrgen"
documentation = "https://jsgf.github.io/rust-xdr/doc/xdrgen/index.html"
readme = "README.md"
keywords = ["encoding", "protocol", "xdr", "rfc4506", "serialization"]
include = [ "src/**/*.rs", "tests/**/*.rs", "*.md", "Cargo.toml"  ]

[[bin]]
name = "xdrgen"
path = "src/xdrgen.rs"
test = false
bench = false
doc = false

[features]
unstable = []

[dependencies]
log = "0.3"
env_logger = "0.4"
nom = "1.*"
quote = "0.3"
clap = "2.*"

[dependencies.xdr-codec]
path = "../xdr-codec"
version = "0.3"

[dev-dependencies]
tempdir = "0.3"
