[package]
name = "xdrgen"
version = "0.4.4"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT/Apache-2.0"
description = "XDR codec generator from specification. Designed for use with xdr-codec."
repository = "https://github.com/jsgf/rust-xdr/tree/master/xdrgen"
documentation = "https://docs.rs/xdrgen/"
readme = "README.md"
keywords = ["encoding", "protocol", "xdr", "rfc4506", "serialization"]
include = [ "src/**/*.rs", "tests/**/*.rs", "*.md", "Cargo.toml"  ]
edition = "2018"

[[bin]]
name = "xdrgen"
path = "src/xdrgen.rs"
test = false
bench = false
doc = false

[features]
unstable = []
derive_serde = ["serde"]
omit_case_warnings = []
derive_json_schema = ["schemars"]

[dependencies]
log = "0.3"
env_logger = "0.4"
nom = { version="3.1", features=["verbose-errors"] }
quote = "1"
proc-macro2 = "1"
clap = "2.24"
lazy_static = "1.4"
bitflags = "1.2"
serde = {version = "1.0", features = ["derive"], optional = true}
schemars = {version = "0.8", optional = true}

[dependencies.xdr-codec]
path = "../xdr-codec"
version = "0.4"

[dev-dependencies]
tempdir = "0.3"
error-chain = "0.10"
